--- a/package.json
+++ b/package.json
@@ -31,8 +31,12 @@
     "url": "https://github.com/Nurutomo/wabot-aq/issues"
   },
   "license": "GPL-3.0-or-later",
-  "dependencies": {
-    "@adiwajshing/baileys": "^3.5.0",
+  "dependencies": {   
+    "@whiskeysockets/baileys": "^6.7.0",
+    "qrcode-terminal": "^0.12.0",
+    "qrcode": "^1.5.3",
+    "yargs": "^17.7.2",
+    "fs-extra": "^11.1.1"
     "awesome-phonenumber": "^2.47.0",
     "brainly-scraper-v2": "^1.1.2",
     "cfonts": "^2.9.1",
